; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_dw_mmc-bluefield.c_dw_mci_bluefield_set_ios.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_dw_mmc-bluefield.c_dw_mci_bluefield_set_ios.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dw_mci = type { i32 }
%struct.mmc_ios = type { i32 }

@UHS_REG_EXT = common dso_local global i32 0, align 4
@UHS_REG_EXT_SAMPLE_MASK = common dso_local global i32 0, align 4
@BLUEFIELD_UHS_REG_EXT_SAMPLE = common dso_local global i32 0, align 4
@UHS_REG_EXT_DRIVE_MASK = common dso_local global i32 0, align 4
@BLUEFIELD_UHS_REG_EXT_DRIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dw_mci*, %struct.mmc_ios*)* @dw_mci_bluefield_set_ios to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dw_mci_bluefield_set_ios(%struct.dw_mci* %0, %struct.mmc_ios* %1) #0 {
  %3 = alloca %struct.dw_mci*, align 8
  %4 = alloca %struct.mmc_ios*, align 8
  %5 = alloca i32, align 4
  store %struct.dw_mci* %0, %struct.dw_mci** %3, align 8
  store %struct.mmc_ios* %1, %struct.mmc_ios** %4, align 8
  %6 = load %struct.dw_mci*, %struct.dw_mci** %3, align 8
  %7 = load i32, i32* @UHS_REG_EXT, align 4
  %8 = call i32 @mci_readl(%struct.dw_mci* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* @UHS_REG_EXT_SAMPLE_MASK, align 4
  %10 = xor i32 %9, -1
  %11 = load i32, i32* %5, align 4
  %12 = and i32 %11, %10
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* @UHS_REG_EXT_SAMPLE_MASK, align 4
  %14 = load i32, i32* @BLUEFIELD_UHS_REG_EXT_SAMPLE, align 4
  %15 = call i32 @FIELD_PREP(i32 %13, i32 %14)
  %16 = load i32, i32* %5, align 4
  %17 = or i32 %16, %15
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* @UHS_REG_EXT_DRIVE_MASK, align 4
  %19 = xor i32 %18, -1
  %20 = load i32, i32* %5, align 4
  %21 = and i32 %20, %19
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* @UHS_REG_EXT_DRIVE_MASK, align 4
  %23 = load i32, i32* @BLUEFIELD_UHS_REG_EXT_DRIVE, align 4
  %24 = call i32 @FIELD_PREP(i32 %22, i32 %23)
  %25 = load i32, i32* %5, align 4
  %26 = or i32 %25, %24
  store i32 %26, i32* %5, align 4
  %27 = load %struct.dw_mci*, %struct.dw_mci** %3, align 8
  %28 = load i32, i32* @UHS_REG_EXT, align 4
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @mci_writel(%struct.dw_mci* %27, i32 %28, i32 %29)
  ret void
}

declare dso_local i32 @mci_readl(%struct.dw_mci*, i32) #1

declare dso_local i32 @FIELD_PREP(i32, i32) #1

declare dso_local i32 @mci_writel(%struct.dw_mci*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
